--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "nodemon": "^2.0.4",
         "webpack-dev-server": "^3.11.0"
     }
 }
